@@ -368,6 +368,10 @@ vips_leak( void )
 	fprintf( stderr, "%s", vips_buf_all( &buf ) );
 
 	vips__type_leak();
+
+#ifdef DEBUG
+#endif /*DEBUG*/
+	vips_buffer_dump_all();
 }
 
 /**
@@ -417,6 +421,8 @@ vips_shutdown( void )
 	if( !done ) 
 		vips__thread_gate_stop( "init: main" ); 
 }
+
+	vips__render_shutdown();
 
 	vips_thread_shutdown();
 
