@@ -5,6 +5,8 @@
  * 25/11/10
  * 	- in synchronous mode, use a single region for input and save huge 
  * 	  mem use
+ * 20/1/14
+ * 	- bg render thread quits on shutdown
  */
 
 /*
@@ -159,6 +161,10 @@ static GThread *render_thread = NULL;
 /* Number of renders with dirty tiles. render_thread queues up on this.
  */
 static VipsSemaphore render_dirty_sem;
+
+/* Set this to ask the render thread to quit.
+ */
+static gboolean render_kill = FALSE;
 
 /* All the renders with dirty tiles.
  */
@@ -476,42 +482,60 @@ render_dirty_put( Render *render )
 static void *
 render_thread_main( void *client )
 {
-	for(;;) {
-		Render *render;
+	Render *render;
 
-		if( (render = render_dirty_get()) ) {
-			/* Ignore errors, I'm not sure what we'd do with them
-			 * anyway.
-			 */
-			VIPS_DEBUG_MSG_GREEN( "render_thread_main: "
-				"threadpool start\n" );
+	while( (render = render_dirty_get()) &&
+		!render_kill ) {
+		VIPS_DEBUG_MSG_GREEN( "render_thread_main: "
+			"threadpool start\n" );
 
-			render_reschedule = FALSE;
-			if( vips_threadpool_run( render->in,
-				render_thread_state_new,
-				render_allocate,
-				render_work,
-				NULL,
-				render ) )
-				VIPS_DEBUG_MSG_RED( "render_thread_main: "
-					"threadpool_run failed\n" );
+		render_reschedule = FALSE;
+		if( vips_threadpool_run( render->in,
+			render_thread_state_new,
+			render_allocate,
+			render_work,
+			NULL,
+			render ) )
+			VIPS_DEBUG_MSG_RED( "render_thread_main: "
+				"threadpool_run failed\n" );
 
-			VIPS_DEBUG_MSG_GREEN( "render_thread_main: "
-				"threadpool return\n" );
+		VIPS_DEBUG_MSG_GREEN( "render_thread_main: "
+			"threadpool return\n" );
 
-			/* Add back to the jobs list, if we need to.
-			 */
-			render_dirty_put( render );
+		/* Add back to the jobs list, if we need to.
+		 */
+		render_dirty_put( render );
 
-			/* _get() does a ref to make sure we keep the render
-			 * alive during processing ... unref before we loop.
-			 * This can kill off the render.
-			 */
-			render_unref( render );
-		}
+		/* _get() does a ref to make sure we keep the render
+		 * alive during processing ... unref before we loop.
+		 * This can kill off the render.
+		 */
+		render_unref( render );
 	}
 
 	return( NULL );
+}
+
+void
+vips__render_shutdown( void )
+{
+	g_mutex_lock( render_dirty_lock );
+
+	if( render_thread ) { 
+		GThread *thread;
+
+		thread = render_thread;
+		render_thread = NULL; 
+
+		g_mutex_unlock( render_dirty_lock );
+
+		render_reschedule = TRUE;
+		render_kill = TRUE;
+		vips_semaphore_up( &render_dirty_sem );
+		(void) g_thread_join( thread );
+	}
+	else
+		g_mutex_unlock( render_dirty_lock );
 }
 
 /* Create our set of RenderThread. Assume we're single-threaded here.
