@@ -1,5 +1,6 @@
 21/1/14 started 7.39.0
 - auto-decode for (almost) all operations
+- background render thread cleans up and quits neatly
 
 22/1/14 started 7.38.2
 - auto RAD decode for affine
